# Features

./: .gitignore  README.md  oauth2.md
.archive/music_auth/music_auth_interface/: .gitignore  Makefile  music_auth.smithy
.archive/music_auth/music_auth_provider/: .gitignore  Cargo.toml  README.md  host_config.json  provider_test_config.toml
.archive/music_auth/music_auth_provider/secure/: deezer.json  test.json
.archive/music_auth/music_auth_provider/src/: config.rs  main.rs
.archive/music_auth/music_auth_provider/tests/: music_auth_provider_test.rs  test_ngs_client.html
.archive/music_auth_interface/: codegen.toml
.archive/music_auth_interface/rust/: Cargo.toml
.archive/music_auth_interface/rust/src/: lib.rs  music_auth.rs
.archive/music_auth_provider/secure/: amazon.json  apple.json  spotify.json
.devcontainer/: devcontainer.json
.github/workflows/: README.md  TODO  monorepo-actor-release.md  monorepo-actor-release.yml
interface/: README.md
interface/.archive/jammin_interface_music_auth/: music_auth.smithy
interface/oauth2-interface/: codegen.toml  oauth2.smithy  oauth_2.smithy
interface/oauth2-interface/rust/: Cargo.toml
interface/oauth2-interface/rust/src/: lib.rs  oauth2.rs  oauth_2.rs
oauth2/: Cargo.toml  Makefile  oauth2.md  provider_test_config.toml
oauth2-interface/: codegen.toml  oauth2.smithy
oauth2-interface/rust/src/: lib.rs  oauth2.rs
oauth2/oauth2-actor/: Cargo.toml  Makefile  README.md  TODO.md  wasmcloud.toml
oauth2/oauth2-actor/src/: lib.rs
oauth2/oauth2-interface/: Makefile  README.md  oauth2.smithy
oauth2/oauth2-interface/rust/: Cargo.toml
oauth2/oauth2-interface/rust/src/: oauth2.rs
oauth2/oauth2-provider/: Cargo.toml  Makefile  README.md  host_config.json  provider_test_config.toml
oauth2/oauth2-provider/.archive/tests/: oauth2_test.rs
oauth2/oauth2-provider/.archive/tests/config/: todo.md
oauth2/oauth2-provider/.archive/tests/config/secure/: authcode_getauthurl.json
oauth2/oauth2-provider/src/: lib.rs  main.rs
oauth2/oauth2-provider/src/methods/: authorize.rs  mod.rs  unauthorize.rs  url.rs
oauth2/oauth2-provider/src/tests/config/: case_insensitive_test_config.toml
oauth2/oauth2-provider/tests/: README.md  oauth2_test.rs  oauth_2_test.rs
oauth2/oauth2-provider/tests/config/: authorization_code_test_config.toml  client_credentials_test_config.toml  device_code_test_config.toml  pkce_test_config.toml  refresh_test_config.toml  todo.md
oauth2/oauth2-provider/tests/config/secure/: AuthCode_GetAuthUrl.json
oauth2/src/: main.rs
provider/: README.md
provider/.archive/music_auth_provider/: Makefile
provider/.archive/music_auth_provider/secure/: google.json
provider/.archive/music_auth_provider/src/: lib.rs
provider/oauth2/: Cargo.toml  Makefile  provider_test_config.toml
provider/oauth2/src/: main.rs
