[package]
name = "oauth2"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"
oauth2-interface = { path = "..//oauth2-interface/rust", version = "0.1.0" }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.6"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "oauth_2"
path = "src/main.rs"
