[package]
name = "oauth2-actor"
version = "0.1.0"
authors = [""]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "oauth_2_actor"

[dependencies]
futures = "0.3.25"
form_urlencoded = "1.1.0"
wasmbus-rpc = "0.11.2"
wasmcloud-interface-httpserver = "0.8.2"
wasmcloud-interface-keyvalue = "0.9.1"
wasmcloud-interface-messaging = "0.8.1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
