[package]
name = "oauth2-provider"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.60"
wasmbus-rpc = "0.11.2"
wasmcloud-interface-httpserver = "0.9.0"
oauth2-interface = { path = "../oauth2-interface/rust", version = "0.1.0" }
oauth2 = "4.3.0"
url = "2.3.1"
strum = { version = "0.24.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.68"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.6.4"
tokio = { version = "1", features = ["full"] }
securestore = "0.100.0"
env_logger = "0.10.0"

[[bin]]
name = "oauth2-provider"
path = "src/main.rs"
