[package]
name = "jammin_provider_music_auth"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
wasmbus-rpc = "0.11"
jammin_interface_music_auth = { path = "../../interface/jammin_interface_music_auth/rust", version = "0.1.0" }
wasmcloud-interface-httpserver = "0.8"
oauth2 = "4.3.0"
anyhow = "1.0.66"
securestore = "0.100"
tempfile = "3.3.0"
serde = "1.0.137"
serde_json = "1.0.81"
base64 = "0.13"
bytes = "1.0"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.23.0", features = ["test-util"] }
http = "0.2"
reqwest = "0.11"

[dev-dependencies]
wasmcloud-test-util = "0.6.4"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "jammin_provider_music_auth"
path = "src/main.rs"
